updates to image sizes

--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
                     <ul class="navigation">
                         <li><a href="index.html">Work</a></li>
                         <li><a href="about.html#skills">About</a></li>
+                        <li><a href="files/resume.pdf" target="_blank">Resume</a></li>
                         <li>
                             <a href="#contact" onclick="menuToggle()">Contact</a>
                         </li>
@@ -39,7 +40,7 @@
                 <h1>About Me</h1>
                     <div>
                         <picture>
-                            <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                            <source srcset="image/expert/600x400/Profile_Picture.JPG" media="(max-width:767px)">
                             <img src="image/expert/Profile_Picture.JPG" alt="Profile Picture">
                         </picture>
                     </div>
