--- a/expert.html
+++ b/expert.html
@@ -20,6 +20,7 @@
                     <ul class="navigation">
                         <li><a href="index.html">Work</a></li>
                         <li><a href="about.html#skills">About</a></li>
+                        <li><a href="files/resume.pdf" target="_blank">Resume</a></li>
                         <li>
                             <a href="#contact" onclick="menuToggle()">Contact</a>
                         </li>
@@ -41,7 +42,7 @@
                 </div>
                 <div>
                     <picture>
-                        <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                        <source srcset="image/expert/600x400/Expert_Logo.png" media="(max-width:767px)">
                         <img src="image/expert/Expert_Logo.png" alt="Expert_Logo">
                     </picture>
                     <p>Expert is an app designed to seamlessly link users seeking specialized knowledge with certified Experts in their respective fields. The Expert serves as a trustworthy source, ensuring users receive accurate and dependable answers to their questions. Whether it's professional advice, technical know-how, or in-depth insights, Expert connects you with qualified individuals who are equipped to provide the precise information you need.</p>
@@ -82,15 +83,15 @@
                     <div>
                         <p>From my newly attained research and insights ,I was able to generate 3 different user personas shown below. These personas represent my target audience for users I imagine would engage in an app like Expert.</p>
                         <picture>
-                            <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                            <source srcset="image/expert/600x400/User_Persona_1.jpg" media="(max-width:767px)">
                             <img src="image/expert/User_Persona_1.jpg" alt="User_Persona_1">
                         </picture>
                         <picture>
-                            <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                            <source srcset="image/expert/600x400/User_Persona_2.jpg" media="(max-width:767px)">
                             <img src="image/expert/User_Persona_2.jpg" alt="User_Persona_2">
                         </picture>
                         <picture>
-                            <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                            <source srcset="image/expert/600x400/User_Persona_3.jpg" media="(max-width:767px)">
                             <img src="image/expert/User_Persona_3.jpg" alt="User_Persona_3">
                         </picture>
                     </div>
@@ -105,17 +106,17 @@
                     <div id="Low_Fidelity">
                         <h4>Low Fidelity Social Sign in User Flow</h4>
                         <picture>
-                            <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                            <source srcset="image/expert/600x400/LF_Social_Sign_In_User_Flow.jpg" media="(max-width:767px)">
                             <img src="image/expert/LF_Social_Sign_In_User_Flow.jpg" alt="Low_Fidelity_Social_Sign_In_User_Flow">
                         </picture>
                         <h4>Low Fidelity Searching for an Expert</h4>
                         <picture>
-                            <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                            <source srcset="image/expert/600x400/LF_Search_for_an_expert_user_flow.jpeg" media="(max-width:767px)">
                             <img src="image/expert/LF_Search_for_an_expert_user_flow.jpeg" alt="Low_Fidelity_Searching_for_an_Expert">
                         </picture>
                         <h4>Low Fidelity Creating an Expert Profile</h4>
                         <picture>
-                            <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                            <source srcset="image/expert/600x400/LF_creating_an_expert_profile_user_flow.jpg" media="(max-width:767px)">
                             <img src="image/expert/LF_creating_an_expert_profile_user_flow.jpg" alt="Low_Fidelity_Creating_an_Expert_Profile">
                         </picture>
                     </div>
@@ -125,17 +126,17 @@
                     <div id="Mid_Fidelity">
                         <h4>Mid Fidelity Social Sign in User Flow</h4>
                         <picture>
-                            <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                            <source srcset="image/expert/600x400/MF_Social_Sign_In_User_Flow.jpg" media="(max-width:767px)">
                             <img src="image/expert/MF_Social_Sign_In_User_Flow.jpg" alt="Mid_Fidelity_Social_Sign_In_User_Flow">
                         </picture>
                         <h4>Mid Fidelity Searching for an Expert</h4>
                         <picture>
-                            <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                            <source srcset="image/expert/600x400/MF_Searching_for_an_expert_user_flow.jpg" media="(max-width:767px)">
                             <img src="image/expert/MF_Searching_for_an_expert_user_flow.jpg" alt="Mid_Fidelity_Searching_for_an_Expert">
                         </picture>
                         <h4>Mid Fidelity Creating an Expert Profile</h4>
                         <picture>
-                            <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                            <source srcset="image/expert/600x400/MF_creating_an_expert_profile_user_flow.jpg" media="(max-width:767px)">
                             <img src="image/expert/MF_creating_an_expert_profile_user_flow.jpg" alt="Mid_Fidelity_Creating_an_Expert_Profile">
                         </picture>
                     </div>
@@ -153,22 +154,22 @@
                     <div>
                         <h4>Social Login Evolution</h4>
                         <picture>
-                            <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                            <source srcset="image/expert/600x400/Social_Login_Evolution.jpg" media="(max-width:767px)">
                             <img src="image/expert/Social_Login_Evolution.jpg" alt="Social_Login_Evolution">
                         </picture>
                         <h4>Home Dashboard Evolution</h4>
                         <picture>
-                            <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                            <source srcset="image/expert/600x400/Home_dashboard_evolution.jpg" media="(max-width:767px)">
                             <img src="image/expert/Home_dashboard_evolution.jpg" alt="Home_Dashboard_Evolution">
                         </picture>
                         <h4>Search Page Evolution</h4>
                         <picture>
-                            <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                            <source srcset="image/expert/600x400/Search_Page_Evolution.jpg" media="(max-width:767px)">
                             <img src="image/expert/Search_Page_Evolution.jpg" alt="Search_Page_Evolution">
                         </picture>
                         <h4>Settings Page Evolution</h4>
                         <picture>
-                            <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                            <source srcset="image/expert/600x400/Settings_Page_Evolution.jpg" media="(max-width:767px)">
                             <img src="image/expert/Settings_Page_Evolution.jpg" alt="Settings Page Evolution">
                         </picture>
                     </div>
