--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                     <ul class="navigation">
                         <li><a href="index.html">Work</a></li>
                         <li><a href="about.html#skills">About</a></li>
+                        <li><a href="files/resume.pdf" target="_blank">Resume</a></li>
                         <li>
                             <a href="#contact" onclick="menuToggle()">Contact</a>
                         </li>
@@ -48,7 +49,7 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-7">
                         <picture>
-                            <source srcset="http://via.placeholder.com/600x400" media="(max-width:767px)">
+                            <source srcset="image/expert/600x400/Expert_Logo.png" media="(max-width:767px)">
                             <img src="image/expert/Expert_Logo.png" alt="Expert Logo">
                         </picture>
                     </div>
